--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,12 @@ button, input {
     right:0;
     overflow:hidden;
     width:100%;
-    height:275px;
+    height:235px;
     margin:auto;
     -webkit-animation: animate-panel .4s cubic-bezier(0.5, -0.25, 0.265, 1.5);
     -moz-animation: animate-panel .4s cubic-bezier(0.5, -0.25, 0.265, 1.5);
 }
-#panel, #sites, #search, button, input {
+#panel, #sites {
     box-sizing:border-box;
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
@@ -120,23 +120,4 @@ button, input {
 }
 #sites a:hover, #sites a:active {
     color:#cf7275;
-}
-#search {
-    bottom:0;
-    height:46px;
-    padding:5px 15px;
-    position:absolute;
-    width:692px;
-    z-index:0;
-}
-#search form {
-    position:relative;
-}
-#search input[type="text"] {
-    background:#161616;
-    border:1px solid #0b0b0b;
-    box-shadow:inset 0 0 2px #222;
-    width:100%;
-    height:33px;
-    padding:3px 86px 3px 6px;
 }
